--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,12 @@
-body {
-    font-family: 'Microsoft YaHei', sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,9,,&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
-.mai-icon {
-    background: #38f;
-    color: #fff;
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    line-height: 40px;
-    margin-right: 20px;
-}
+
 .navbar {
     margin-bottom: 0;
     border-bottom: 1px solid #e6e6e6;
@@ -36,40 +32,168 @@ body {
 .navbar-default .navbar-nav>li>a:hover {
     color: #38f;
 }
-.banner{
+.navbar-logo {
+    font-size: 16px;
+    color: #444;
+    height: 70px;
+    line-height: 35px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    font-size: 25px;
+}
+
+/* Banner */
+.banner {
     text-align: center;
     color: #fff;
-    background: url(../images/banner.jpg);
+    background: #000200;
     background-size: cover;
 }
-.lvjing{
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.7);
-    padding: 80px 0;
-}
-/*home*/
-/* #home{
-    margin-top: 70px;
-    background: url("../images/home-bg.jpg");
+#home {
+    border: 70px solid black;
+    background: #000200;
     background-size: cover;
     color: #ffffff;
     text-align: center;
     width: 100%;
 }
-#home h1{
-    font-weight: bold;
-    margin-top: 0;
-    margin-bottom: 25px;
+#home h1 {
+    color: transparent;
+    font-weight: 900;
+    font-size: 11em;
+    -webkit-text-stroke: 2px #fff;
+    margin-bottom: 50px;
 }
-#home p{
+#home p {
     font-weight: 400;
     line-height: 35px;
 }
-#home img{
-    margin-top: 30px;
-    display: inline-block;
-} */
+#home .star {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    animation: animate 8s ease-in-out infinite, backgroundmove 16s linear infinite;
+}
+#home .star.star1 {
+    animation-delay: 0s;
+    background: url(../images/stars/star1.png);
+}
+#home .star.star2 {
+    animation-delay: -1s;
+    background: url(../images/stars/star2.png);
+}
+#home .star.star3 {
+    animation-delay: -2s;
+    background: url(../images/stars/star3.png);
+}
+#home .star.star4 {
+    animation-delay: -3s;
+    background: url(../images/stars/star4.png);
+}
+#home .star.star5 {
+    animation-delay: -4s;
+    background: url(../images/stars/star5.png);
+}
+#home .star.star6 {
+    animation-delay: -5s;
+    background: url(../images/stars/star6.png);
+}
+#home .star.star7 {
+    animation-delay: -6s;
+    background: url(../images/stars/star7.png);
+}
+#home .star.star8 {
+    animation-delay: -7s;
+    background: url(../images/stars/star8.png);
+}
+@keyframes animate {
+    0%, 20%, 40%, 60%, 80%, 100% {
+        opacity: 0;
+    }
+    10%, 30%, 50%, 70%, 90% {
+        opacity: 1;
+    }
+}
+@keyframes backgroundmove {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(2);
+    }
+}
+#home .button {
+    margin: 10px 0;
+    position: relative;
+    border: solid white;
+    background: #000200;
+    color: #fff;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.5s;
+    box-shadow: 0 20px 25px #000200;
+    overflow: hidden;
+    text-decoration: none;
+    letter-spacing: 0.1em;
+    font-size: 1.3em;
+    margin-left: 468px;
+}
+#home .button:hover {
+    width: 200px;
+    transition-delay: 0.5s;
+}
+#home .button::before {
+    content: '';
+    position: absolute;
+    right: 25px;
+    width: 12px;
+    height: 12px;
+    border-top: 3px solid #fff;
+    border-right: 3px solid #fff;
+    transform: rotate(45deg);
+    transition: 0.5s;
+}
+#home .button:hover::before {
+    transform: rotate(45deg) translate(50px, -50px);
+}
+#home .button::after {
+    content: '';
+    position: absolute;
+    left: -50px;
+    width: 12px;
+    height: 12px;
+    border-top: 3px solid #fff;
+    border-right: 3px solid #fff;
+    transform: rotate(45deg) translate(-50px, 50px);
+    transition: 0.5s;
+}
+#home .button:hover::after {
+    transform: rotate(45deg) translate(50px, -50px);
+    transition-delay: 1s;
+}
+#home .button span {
+    visibility: hidden;
+    opacity: 0;
+    white-space: nowrap;
+    transition: 0.5s;
+    transform: translateX(-30px);
+}
+#home .button:hover span {
+    visibility: visible;
+    opacity: 1;
+    transition-delay: 0.75s;
+    transform: translateX(10px);
+}
+
 /*bbs*/
 #bbs{
     padding: 80px 0;
@@ -121,7 +245,7 @@ body {
     background: #ffffff;
     border: 1px solid #eee;
 }
-#course .btn{
+/* #course .btn{
     background: transparent;
     border: 1px solid #38f;
     border-radius: 0px;
@@ -134,7 +258,7 @@ body {
 #course .btn:hover{
     background: #38f;
     color: #fff;
-}
+} */
 .course .case-img{
     width:100%;
     height:auto;
@@ -148,7 +272,7 @@ body {
     font-weight: bold;
     padding-bottom: 30px;
 }
-#app .btn{
+/* #app .btn{
     margin: 10px 0;
     background: rgb(64, 210, 177);
     border-color: rgb(64, 210, 177);
@@ -158,7 +282,7 @@ body {
 }
 #app .btn:hover{
     background: rgb(44, 142, 120);
-}
+} */
 
 /*contact*/
 #contact{
@@ -193,11 +317,17 @@ body {
 #contact input[type="submit"]:hover{
     background: rgb(44, 142, 120);
 }
+.lvjing {
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.7);
+    padding: 80px 0;
+}
 
 /*footer*/
 footer{
     font-weight: 400;
     text-align: center;
-    padding:20px;
-    color:#999;
+    padding: 20px;
+    color: #999;
 }
